--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,6 +34,10 @@ target 'FirstProject' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
   target 'FirstProjectTests' do
     inherit! :search_paths
     # Pods for testing
