--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-pdf": "^6.0.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-scaling-drawer": "^1.0.1",
     "react-native-screens": "^2.0.0-alpha.23",
+    "react-native-webview": "^8.0.4",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
-    "react-navigation-stack": "^2.0.14"
+    "react-navigation-stack": "^2.0.14",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
