--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -152,10 +152,10 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+            storeFile file('your_key_name.keystore')
+            storePassword ''
+            keyAlias 'your_key_alias'
+            keyPassword ''
         }
     }
     buildTypes {
